@@ -1,4 +1,5 @@
 Alpha 0.1.8.58
+- Add resource pack instead of overwriting other resource packs on supported versions.
 
 Alpha 0.1.8.57
 - Fix support for Minecraft < 1.20. Whoops!
